fix nodata text-align center

--- a/intera/stylesheets/application.css
+++ b/intera/stylesheets/application.css
@@ -355,7 +355,7 @@ div.flash{margin-top:10px}
 div.flash.notice{background:url(../../../images/true.png) 8px 5px no-repeat;background-color:#d0f2d0;border-color:#d0f2d0;color:#2ea122}
 .conflict,div.flash.warning{background:url(../../../images/warning.png) 8px 5px no-repeat;background-color:#ffd;border-color:#ffd;color:#767676;text-align:left}
 .warning{text-align:center;background-color:#ffd;border-color:#ffd;color:#767676}
-.nodata{background-color:#f5f5f5}
+.nodata{background-color:#f5f5f5;text-align:center}
 #ajax-indicator{position:absolute;background-color:#efefef;border:1px solid #bebebe;top:35%;left:40%;width:20%;font-weight:700;text-align:center;padding:5px;z-index:100;opacity:.5}
 html>body #ajax-indicator{position:fixed}
 #ajax-indicator span{background-position:0 40%;background-repeat:no-repeat;background-image:url(../../../images/loading.gif);padding-left:25px;vertical-align:bottom}
@@ -691,6 +691,7 @@ h1,h2,h3,h4{font-family:"Lucida Grande",verdana,arial,helvetica,sans-serif}
 #top-menu{background-color:#222;color:#bebebe;padding:5px 20px;height:30px}
 #top-menu a{color:#e1e1e1;margin-right:10px}
 #errorExplanation,.conflict,.nodata,.warning,div.flash{border:0 solid;border-radius:0;padding:10px;margin:0;margin-bottom:20px;margin-top:20px}
+#errorExplanation,.conflict,.warning,div.flash{padding-left:30px}
 div#content>div.flash{border:0 solid;border-bottom:1px solid #bebebe;margin:-10px -20px 10px;padding:10px 20px;padding-left:50px;position:relative}
 #flash_notice{background-position:20px 12px;background-repeat:no-repeat}
 div.flash.notice{background-image:url(/images/true.png)}
@@ -975,3 +976,4 @@ div#content{width:100%}
 #filters-table .field > label{margin-left:5px}
 .tabular input,.tabular select{max-width:95%}
 .tabular.settings label ~ *{margin-left:10px}
+.splitcontentleft > .wiki + ul + .box{margin-top:30px}
